// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterUtils filterData IsEmpty for date 1`] = `
Array [
  Object {
    "date": null,
    "id": 5,
    "name": "Marshall Bruce",
    "passed": true,
    "score": 77,
  },
]
`;

exports[`FilterUtils filterData IsNotEmpty for date 1`] = `
Array [
  Object {
    "date": 2021-12-20T08:00:00.000Z,
    "id": 1,
    "name": "Mike Wazowski",
    "passed": true,
    "score": 80,
  },
  Object {
    "date": 2021-12-20T12:00:00.000Z,
    "id": 2,
    "name": "Billi Bob",
    "passed": false,
    "score": 55,
  },
  Object {
    "date": 2021-11-20T12:00:00.000Z,
    "id": 3,
    "name": "Tom Williams",
    "passed": false,
    "score": 45,
  },
  Object {
    "date": 2021-12-19T12:00:00.000Z,
    "id": 4,
    "name": "Kurt Cobain",
    "passed": true,
    "score": 75,
  },
  Object {
    "date": 2021-12-17T12:00:00.000Z,
    "id": 6,
    "name": "Sunny Fox",
    "passed": false,
    "score": 33,
  },
]
`;

exports[`FilterUtils filterData by date 1`] = `
Array [
  Object {
    "date": 2021-12-20T08:00:00.000Z,
    "id": 1,
    "name": "Mike Wazowski",
    "passed": true,
    "score": 80,
  },
  Object {
    "date": 2021-12-20T12:00:00.000Z,
    "id": 2,
    "name": "Billi Bob",
    "passed": false,
    "score": 55,
  },
]
`;

exports[`FilterUtils filterData one item 1`] = `
Array [
  Object {
    "date": 2021-12-20T12:00:00.000Z,
    "id": 2,
    "name": "Billi Bob",
    "passed": false,
    "score": 55,
  },
]
`;

exports[`FilterUtils filterData two item 1`] = `Array []`;

exports[`FilterUtils getRowEditableCells should return required cells from table EditableCells 1`] = `
Array [
  Object {
    "columnKey": "10",
    "rowKey": 10,
  },
]
`;

exports[`FilterUtils searchData by boolean 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Mike Wazowski",
    "passed": true,
    "score": 80,
  },
  Object {
    "id": 4,
    "name": "Kurt Cobain",
    "passed": true,
    "score": 75,
  },
  Object {
    "id": 5,
    "name": "Marshall Bruce",
    "passed": true,
    "score": 77,
  },
]
`;

exports[`FilterUtils searchData by string 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Mike Wazowski",
    "passed": true,
    "score": 80,
  },
]
`;

exports[`FilterUtils searchData should find value by search handler 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Mike Wazowski",
    "passed": true,
    "score": 80,
  },
  Object {
    "id": 4,
    "name": "Kurt Cobain",
    "passed": true,
    "score": 75,
  },
  Object {
    "id": 5,
    "name": "Marshall Bruce",
    "passed": true,
    "score": 77,
  },
]
`;

exports[`FilterUtils searchData should not find value by search handler 1`] = `Array []`;
